[package]
name = "fsend"
version = "0.1.0"
edition = "2024"
description = "基于 cscall 框架的高性能 UDP 文件传输程序"

[dependencies]
anyhow = "1.0.100"
bitcode = "0.6.7"
clap = { version = "4.5.54", features = ["derive"] }
crossfire = { version = "2.1.9", features = ["tokio"] }
cscall = { path = "../cscall" }
dashmap = "6.1.0"
hex = "0.4.3"
indicatif = "0.18.3"
mimalloc = "0.1.48"
mmap-io = { version = "0.9.4", default-features = false, features = [
  "advise",
  "hugepages"
] }
rand = "0.8"
rpassword = "7.4.0"
scopeguard = "1.2.0"
socket2 = "0.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
